Bug 1308069 - Clear pending error event fired by src="" case if src changed before it fired. r=bz

MozReview-Commit-ID: B8f975mZNN9